# equevu-hr

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini
apps/candidates/: models.py  serializers.py  urls.py  views.py
apps/candidates/migrations/: 0001_initial.py
apps/candidates/tests/: test_models.py  test_views.py
apps/core/: storage.py
config/: settings.py  urls.py
docker/backend/: Dockerfile  start.sh
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CandidateForm.tsx  CandidateList.tsx  Layout.tsx
